# satosa-openid4vci

./: README.md  pyproject.toml  setup.py
SUNET_setup/fed_unit/: README.rst  create_trust_mark.py  entities.json  entity.py  trust_anchors.json
SUNET_setup/openid4vci_oidc/: README.rst  index.html  internal_attributes.yaml  proxy_conf.yaml  public-key.pem  run.sh  users.json
documentation/: conf.py  example.rst  index.rst  intro.rst
example/: add_item.py  entities.json  entity.py  kill_all.sh  openid4vci_frontend.yaml  run_wallet.sh  setup_fed.py  start_all.sh
example/cred/: conf_pid.json  views.py
example/flask_wallet/: conf.json  conf_full.json  conf_simplified.json  old_views.py  views.py  views_full.py  views_old.py  views_simplified.py
example/ta/: dc4eu_subordinates.json
example/tmi/: conf.json  obc_se  pid_se  tmi_authority_hints.json  tmi_trust_anchors.json  views.py
example/wp/: conf.json  views.py  (+1 more)
openid4vci_oidc/: README.rst  cert.pem  convert_json_to_yaml.py  index.html  internal_attributes.yaml  private-key.pem  proxy_conf.yaml  synchronize.md
script/: print_stored.py  print_stored_dir.py  storage.py
tests/: Test_10_entity_configuration.py  __init__.py  build_federation.py  init.py  satosa_conf.yaml  test_01_message.py  test_02_fed_entity_persistence.py  test_02_oci_persistence.py  test_02_op_persistence.py  test_02_persistence.py  test_03_utils.py  test_04_authz_detail.py  test_04_endpoint.py  test_04_init_and_reg.py  test_05_ci_flow.py  test_10_entity_configuration.py  users.py  x_test_04_authz_detail.py  yytest_04_endpoint.py
(+61 files in other folders)
